SONARPY-2293 Represent imports by module in the update symbol table